# cms-backend

./: .ci-test  .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTHENTICATION.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.txt  DEPLOYMENT-RULES-TEST.md  E2E-TEST-DEPLOYMENT-FLOW.md  ENV_SETUP.md  Itqan_CMS_API.postman_collection.json  Itqan_CMS_Environments.postman_environment.json  LICENSE  README.md  TEST-DEPLOYMENT-RULES.md  WARP.md  add-github-connection.js  auth0-config.json  cookies.txt  create_admin_user.py  dev.sh  diagnose_admin_errors.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  env.develop  env.example  env.local  env.production  env.staging  fix-github-connection.js  fix_admin_permissions.py  justfile  (+25 more)
.agents/rules/: cms-backend.mdc
.cursor/rules/: cms-backend.mdc  cms-v1.mdc  cms.mdc  cvs-v1.mdc  docs.mdc  general.mdc  general_docs.mdc  screens-flow.mdc  tests.mdc
.devcontainer/: devcontainer.json
.docs/: per-publisher-dashboards.md
.github/: branch-protection-rules.md  dependabot.yml  pre-push-hook.sh
.github/scripts/: update-changelog.py
.github/workflows/: branch-naming.yml  changelog.yml  ci-cd.yml  commitlint.yml  debug-deploy.yml  deploy.yml  deploy.yml.backup  docs-website-deploy.yml  health-check.yml  hub-compliance.yml  schema-verification.yml  test_lint.yml  version-bump.yml
ai-memory-bank/: cms-v1-apis-contract.md  tasks-screens-flow.csv  tasks.csv
ai-memory-bank/docs/: requirements.md
ai-memory-bank/tasks/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  4.json  5.json  6.json  7.json  8.json  9.json  check_original_7.json
ai-memory-bank/tasks-screens-flow/: SF-01.json  SF-02.json  SF-03.json  SF-04.json  SF-05.json  SF-06.json  SF-07.json  SF-08.json  SF-09.json  SF-10.json
apps/content/: admin.py  apps.py  asset_views.py  cache.py  license_views.py  models.py  publisher_views.py  schema_validation.py  serializers.py  signals.py  tasks.py  translation.py
apps/core/: admin.py  apps.py  example_for_ai.py  file_uploaders.py  models.py  permission_utils.py  permissions.py  slugs.py  test_uploads.py  tests.py  uploads.py  utils.py
apps/licensing/: access_control.py  admin.py  apps.py  models.py  notifications.py  serializers.py  signals.py  tasks.py  views.py
apps/mixins/: helpers.py  middleware.py  recitations_helpers.py
apps/personalization/: admin.py  models.py
apps/publishers/: admin.py  apps.py  models.py  publisher_old.py  signals.py  tasks.py  translation.py  types.py
apps/quran/: models.py
apps/templates/: base.html
apps/usage_tracking/: __init__.py  apps.py  tasks.py
apps/users/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  saml_processor.py  serializers.py  urls.py  views.py
backend/: .env.production  README.md  db.sqlite3.backup  manage.py  openapi.yaml  test_access_request_workflow.py  test_api_structure.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/core/: auth0.py  models.py  urls.py  views.py
backend/itqan_cms/: asgi.py  settings.py  urls.py
backend/requirements/: base.txt
cms/: .strapi-updater.json  Dockerfile.dev  package.json  tsconfig.json
cms/config/: database.ts  plugins.ts
cms/src/: index.ts
config/: asgi.py  celery.py  celery_app.py  cms_api.py  developers_api.py  ninja_api.py  ninja_urls.py  portal_api.py  tenant_api.py  urls.py  workers.py  wsgi.py
config/helpers/: sentry.py
config/settings/: base.py  development.py  local.py  production.py  staging.py  test.py  test_sqlite.py
config/tests/: test_celery_config.py
deployment/: DEPLOYMENT_GUIDE.md  ENVIRONMENT_GUIDE.md  INFRASTRUCTURE_SUMMARY.md  deploy-develop.sh  pre-deploy-checks.sh
deployment/docker/: Caddyfile  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.develop.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  env.staging.template  env.template  init-db.sql
deployment/scripts/: safe_migration.sh
docs/: ARCHITECTURE.md  AUTHENTICATION.md  C4-Model-Levels.md  CHANGE_SUMMARY.md  Itqan - Draft - Page 1.csv  Itqan_CMS_BRD.md  Itqan_CMS_BRS.md  conf.py  howto.rst  index.rst  requirements.md
docs-website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  wrangler.toml
docs-website/docs/: intro.md
docs-website/scripts/: remark-api-base.mjs  set-api-base-url.mjs
docs/api/: openapi-spec.yaml
docs/db-design/: er-diagram.mmd  this.drawio
en/: README.md  admin_wireframes.html  convert_to_images.js  create_english_wireframes.html  final_wireframes.html  public_and_workflow_wireframes.html
frontend/: README.md  angular.json  auth0-github-config.md  configure-auth0.js  debug-oauth-flow.js  diagnose-oauth-error.js  enable-github-connection.js  fix-github-connection.js  package-lock.json  package.json  test-auth-flow.js  test-github-auth.js  update-github-connection.js  update-github-oauth.js  verify-auth0-config.js  verify-github-oauth.js  vite.config.ts
frontend-backup-20250821-063611/: README.md  angular.json  package-lock.json
mock_api/: __init__.py  authentication.py  dummy_data.py  views.py
requirements/: base.txt  development.txt  production.txt
scripts/: init-db.sql
src/: .env.example  README.md  login_result.json  manage.py  openapi.yaml  requirements.txt  test_assets_api.py  test_auth0_integration.py  test_search_integration.py
temp/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  admin_content_admin_tests.py  task.csv
tools/: export-screens.mjs  package-lock.json  package.json
web/: Dockerfile.dev  next.config.js  package.json  tsconfig.json
(+1010 files in other folders)
