# ========================
# Project Configuration
# ========================


[project]
name = "itqan-cms-backend"
version = "0.1.0"
description = "Itqan CMS Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.40.*",
    "celery==5.5.*",
    "django-allauth[mfa,socialaccount,headless,headless-spec]==65.16.1",
    "django-celery-beat==2.9.*",
    "django-cors-headers>=4.7.0",
    "django-countries>=7.6",
    "django-extended-makemessages>=1.8.0",
    "django-filter==25.2",
    "django-modeltranslation==0.20.3",
    "django-ninja==1.5.1",
    "django-oauth-toolkit==3.2.0",
    "django-phonenumber-field[phonenumbers]==8.1.0",
    "django-plain-permissions==0.0.2",
    "django-redis==6.0.*",
    "django-storages[s3]==1.14.*",
    "Django==5.2.*",
    "djangorestframework-simplejwt==5.5.*",
    "djangorestframework>=3.16.1",
    "djangosaml2idp>=0.7.2",
    "flower==2.0.*",
    "mixpanel>=4.10.1",
    "mutagen>=1.47.0",
    "ninja-keys>=1.0.1",
    "Pillow>=10.3.0",
    "psycopg2-binary==2.9.11",
    "python-decouple==3.8",
    "redis==6.4.0",
    "scalar-ninja==0.3.0",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.91",
    "coverage==7.10.6",
    "django-coverage-plugin==3.1.1",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-stubs-ext>=5.2.8",
    "django-stubs[compatible-mypy]==5.2.8",
    "django-watchfiles>=1.4.0",
    "djangorestframework-stubs>=3.16.8",
    "djlint==1.36.4",
    "freezegun>=1.5.5",
    "ipdb==0.13.13",
    "isort==7.0.*",
    "model-bakery>=1.20.5",
    "moto>=5.1.11",
    "mypy==1.17.1",
    "pre-commit==4.5.1",
    "pytest-cov>=6.3.0",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "pytest==8.4.2",
    "responses>=0.25.8",
    "ruff>=0.14,<0.16",
]

# ==== Mypy ====
# Configured for docs-website and `export_public_openapi.py` (the docs pipeline's OpenAPI export command)
# explicit_package_bases: repo root is named "cms-backend" — hyphen breaks mypy's package
#   resolution. This flag makes mypy find packages (apps/, config/) from current working directory instead.
# follow_imports = "silent": `mypy export_public_openapi.py` reports errors only in thatbfile
[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
follow_imports = "silent"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 120
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[project.optional-dependencies]
prod = [
    "gunicorn==21.2.*",
    "uvicorn[standard]==0.34.*",
    "sentry-sdk[django]==2.53.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
ninja-keys = { git = "https://github.com/hassaanalansary/ninja-keys.git" }

# ========================
# Pytest
# ========================

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.development --reuse-db --import-mode=importlib"
filterwarnings = [
     "ignore::DeprecationWarning",
]
python_files = [
    "tests.py",
    "test_*.py",
]

# ========================
# Black (Formatter)
# ========================

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = false

# ========================
# Ruff (Linter & Import rules)
# ========================

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by Black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

# ========================
# isort (Import sorter)
# ========================

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["apps", "config"]
force_sort_within_sections = true
combine_as_imports = true

# ========================
# Bandit (Security)
# ========================

[tool.bandit]
targets = ["apps", "config"]
skips = ["B101"]  # optional: skip assert-use warning

# ========================
# Coverage (Optional)
# ========================

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
